[package]
name = "mirl_system"
version = "0.0.0-alpha"
edition.workspace = true
repository.workspace = true

[dependencies]

mirl_core = { version = "0.0.0-alpha", features = ["font_support"] }
mirl_extensions = { version = "0.0.0-alpha", features = ["mirl_input"] }
mirl_buffer = { version = "0.0.0-alpha" }
mirl_graphics = { version = "0.0.0-alpha" }
mirl_collections = { version = "0.0.0-alpha", features = ["font_support"] }
mirl_input = { version = "0.0.0-alpha", features = ["cursor_loading"] }

mirl_derive = { version = "0.0.0-alpha", optional = true }
# Codec
compactly = { version = "0.1.6", optional = true }
serde = { version = ">=1.0", optional = true, default-features = false, features = [
    "derive",
] }
bitcode = { version = "0.6.9", optional = true, default-features = false, features = [
    "derive",
] }
wincode = { version = "0.5.3", optional = true, features = ["derive"] }
zerocopy = { version = "0.8.48", optional = true, default-features = false, features = [
    "float-nightly",
    "derive",
] }

# Enum functionality
strum = { version = ">=0.28", optional = true, default-features = false, features = [
    "derive",
] }
enum_ext = { version = "0.6.0", optional = true, default-features = false }


# system
raw-window-handle = { version = ">=0.6.2", default-features = false }
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.48", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_SystemInformation",
    "Win32_System_Power",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_System_Com",
    "Win32_UI_Shell",
    "Win32_System_Memory",
    "Win32_System_Registry",
] }
windows-sys = { version = "0.61.2", features = [
    "Win32_UI_Shell",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Diagnostics",
    "Win32_Graphics",
    "Win32_Graphics_Gdi",
    "Win32_System_Threading",
    "Win32_Security",
] }
tempfile = { version = ">=3", default-features = false }


[target.'cfg(target_os = "linux")'.dependencies]
x11 = { "version" = ">=2.18.0", default-features = false }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = ">=0.3", features = ["Window"] }

[features]
miri = []
all = ["all_codecs", "all_enum_extensions"]

# Does nothing by itself. Needs another codec or enum flag to do something
mirl_derive = ["dep:mirl_derive"]
# Compatibility with ffi
c_compatible = ["mirl_derive"]
# Enables all codecs
all_codecs = ["serde", "bitcode", "wincode", "compactly", "zerocopy"]
# All enum extensions
all_enum_extensions = ["strum", "enum_ext"]

# Codec stuff
serde = ["dep:serde", "mirl_derive", "mirl_core/serde"]
bitcode = ["dep:bitcode", "mirl_derive", "mirl_core/bitcode"]
wincode = ["dep:wincode", "mirl_derive", "mirl_core/wincode"]
compactly = ["dep:compactly", "mirl_derive", "mirl_core/compactly"]
zerocopy = ["dep:zerocopy", "mirl_derive", "mirl_core/zerocopy"]

# Enum extensions
strum = ["dep:strum", "mirl_derive"]
enum_ext = ["dep:enum_ext", "mirl_derive"]

[lints]
workspace = true
[build-dependencies]
mirl_build_tools = { workspace = true }
