[package]
name = "mirl_system"
version = "0.0.0-alpha"
edition.workspace = true
repository.workspace = true

[features]
miri = []
all = [
    "all_codecs",
    "all_enum_extensions",
    "font_support",
    "mirl_buffer/all",
    "mirl_collections/all",
    "mirl_extensions/all",
    "mirl_graphics/all",
    "mirl_input/all",
    "x11/all",
]
_checking = ["all"]
# Does nothing by itself. Needs another codec or enum flag to do something
mirl_derive = [
    "dep:mirl_derive",
    "mirl_buffer/mirl_derive",
    "mirl_collections/mirl_derive",
    "mirl_graphics/mirl_derive",
    "mirl_input/mirl_derive",
]
# Compatibility with ffi
c_compatible = [
    "mirl_derive",
    "mirl_buffer/c_compatible",
    "mirl_collections/c_compatible",
    "mirl_extensions/c_compatible",
    "mirl_graphics/c_compatible",
    "mirl_input/c_compatible",
]
# Enables all codecs
all_codecs = [
    "serde",
    "bitcode",
    "wincode",
    "compactly",
    "zerocopy",
    "mirl_buffer/all_codecs",
    "mirl_collections/all_codecs",
    "mirl_graphics/all_codecs",
    "mirl_input/all_codecs",
]
# All enum extensions
all_enum_extensions = [
    "strum",
    "enum_ext",
    "mirl_collections/all_enum_extensions",
    "mirl_input/all_enum_extensions",
]
# Codec stuff
serde = [
    "dep:serde",
    "mirl_derive",
    "bitcode?/serde",
    "mirl_buffer/serde",
    "mirl_collections/serde",
    "mirl_graphics/serde",
    "mirl_input/serde",
    "wasm-bindgen/serde",
]
bitcode = [
    "dep:bitcode",
    "mirl_derive",
    "mirl_buffer/bitcode",
    "mirl_collections/bitcode",
    "mirl_graphics/bitcode",
    "mirl_input/bitcode",
]
wincode = [
    "dep:wincode",
    "mirl_derive",
    "mirl_buffer/wincode",
    "mirl_collections/wincode",
    "mirl_graphics/wincode",
    "mirl_input/wincode",
]
compactly = [
    "dep:compactly",
    "mirl_derive",
    "mirl_buffer/compactly",
    "mirl_collections/compactly",
    "mirl_graphics/compactly",
    "mirl_input/compactly",
]
zerocopy = [
    "dep:zerocopy",
    "mirl_derive",
    "mirl_buffer/zerocopy",
    "mirl_collections/zerocopy",
    "mirl_graphics/zerocopy",
    "mirl_input/zerocopy",
]
# Enum extensions
strum = [
    "dep:strum",
    "mirl_derive",
    "mirl_collections/strum",
    "mirl_graphics/strum",
    "mirl_input/strum",
]
enum_ext = [
    "dep:enum_ext",
    "mirl_derive",
    "mirl_collections/enum_ext",
    "mirl_graphics/enum_ext",
    "mirl_input/enum_ext",
]
font_support = ["dep:fontdue", "mirl_collections/font_support"]

[dependencies]
bitcode = { version = "0.6", optional = true, default-features = false, features = [
    "derive",
] }
# Codec
compactly = { version = "0.1", optional = true }
enum_ext = { version = "0.6", optional = true, default-features = false }
fontdue = { version = "0.9", optional = true }
mirl_buffer = { version = "0.0.0-alpha" }
mirl_collections = { version = "0.0.0-alpha", features = ["font_support"] }
mirl_derive = { version = "0.0.0-alpha", optional = true }
# mirl_core = { version = "0.0.0-alpha", features = ["font_support"] }
mirl_extensions = { version = "0.0.0-alpha", features = ["mirl_input"] }
mirl_graphics = { version = "0.0.0-alpha" }
mirl_input = { version = "0.0.0-alpha", features = ["cursor_loading"] }
# system
raw-window-handle = { version = "0.6", default-features = false }
serde = { version = "1.0", optional = true, default-features = false, features = [
    "derive",
] }
# Enum functionality
strum = { version = "0.28", optional = true, default-features = false, features = [
    "derive",
] }
wincode = { version = "0.5", optional = true, features = ["derive"] }
zerocopy = { version = "0.8", optional = true, default-features = false, features = [
    "float-nightly",
    "derive",
] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window"] }

[target.'cfg(target_os = "linux")'.dependencies]
x11 = { "version" = "2.18", default-features = false }
[target.'cfg(target_os = "windows")'.dependencies]
tempfile = { version = "3.27", default-features = false }
windows = { version = "0.48", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_SystemInformation",
    "Win32_System_Power",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_System_Com",
    "Win32_UI_Shell",
    "Win32_System_Memory",
    "Win32_System_Registry",
] }
windows-sys = { version = "0.61.2", features = [
    "Win32_UI_Shell",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Diagnostics",
    "Win32_Graphics",
    "Win32_Graphics_Gdi",
    "Win32_System_Threading",
    "Win32_Security",
] }
[build-dependencies]
mirl_build_tools = { workspace = true }

[lints]
workspace = true
